--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,4 +20,11 @@
         <item name="android:paddingBottom">4dp</item>
     </style>
 
+    <style name="FullScreenDialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowAnimationStyle">@style/FullScreenDialog.Window</item>
+    </style>
+
+    <style name="FullScreenDialog.Window" parent="@android:style/Animation.Dialog" />
+
 </resources>
